# tool-python-dev

./: .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: new-tool.md
.github/workflows/: ci.yml
src/: hello.py  sign_jwt.py
src/tests/: test_hello.py  test_sign_jwt.py
src/tool_python_dev/: __init__.py  hello.py
tests/: test_hello.py
