[project]
name = "tool-python-dev"
version = "0.1.0"
description = "A collection of helper tools for development teams using uv and uvx"
authors = [
    { name = "carpusherw", email = "41030581+carpusherw@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
hello = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
